Documentation edits made through Mintlify web editor

--- a/app-builder/builder/components/cta.mdx
+++ b/app-builder/builder/components/cta.mdx
@@ -3,7 +3,7 @@ title: 'CTA'
 description: 'Description of your new file.'
 icon: "circle-user"
 ---
-### **4.2.5. CTA** {#4.2.5.-cta}
+### **4.2.5. CTA** 
 
 **Tổng quan**
 
