--- a/app-builder/builder/components/news.mdx
+++ b/app-builder/builder/components/news.mdx
@@ -4,3 +4,120 @@ description: 'Description of your new file.'
 icon: "circle-user"
 ---
 
+### **4.2.6. News** 
+
+**Dữ liệu**: 
+
+* **Thêm dữ liệu mới:**  
+  * **Bước 1**: Người dùng nhấn vào nút "Thêm dữ liệu mới"
+
+<Frame caption="Thêm dữ liệu mới  ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image169_a8189018fa.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+
+  * **Bước 2:** Người dùng nhập tiêu đề tin tức, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện"
+
+<Frame caption="Màn hình thêm dữ liệu  ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image93_d0e1b33f58.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+
+  * **Bước 3:** Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm tin tức hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu  
+* **Sửa:**  
+  * **Bước 1:** Người dùng nhấn vào nút ![][image285]để đến trang chỉnh sửa
+
+<Frame caption="Nút chỉnh sửa ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image65_3b249e0f79.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+
+  * **Bước 2:** Người dùng sửa tiêu đề tin tức, nhấn "Tải ảnh lên và chọn ảnh từ thư viện"
+
+<Frame caption="Màn hình chỉnh sửa dữ liệu  ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image195_d958fb2143.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+  * **Bước 3:** Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa tin tức hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu  
+* **Xóa:**  
+  * **Bước 1**: Người dùng nhấn vào nút ![][image288]để xóa dữ liệu
+
+<Frame caption="Nút xóa dữ liệu   ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image163_d9ff8be9bc.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+  * **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn "Xóa ngay" để tiến hành xóa tin tức hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu  
+* **Tổng quan**  
+  * **Hiển thị tiêu đề:**  
+    * Người dùng nhấn nút ![][image290]để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề tin tức và không có tiêu đề tin tức, ngoài ra người dùng có thể nhập tiêu đề cho phần tin tức. Ví dụ, nếu tiêu đề là "Đây là phần tin tức" thì phần tin tức sẽ như thế này
+
+<Frame caption=" ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image15_edc786c82c.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+
+* Tiêu đề phần tin tức  
+  * **Kích thước /Màu sắc:**  
+    * Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần tin tức tại ![][image292]  
+* **Thẻ tin tức**  
+  * **Lề ngoài**  
+    * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa danh sách tin tức với các phần khác trong phần tin tức bằng nút ![][image293]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image294]  
+    * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa danh sách tin tức với các phần khác trong phần tin tức bằng nút ![][image295]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image296]  
+  * **Lề trong**  
+    * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa thẻ tin tức với các thành phần bên trong thẻ bằng nút ![][image297]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image298]  
+    * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa thẻ tin tức với các thành phần bên trong thẻ bằng nút ![][image299]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image300]  
+  * **Chiều cao:**  
+    * Người dùng có thể nhập hoặc tăng/giảm chiều cao của thẻ tin tức tại ![][image301]  
+  * **Nền**  
+    * Chọn màu nền cho thẻ tin tức bằng cách nhấn ô vuông ![][image302]sau đó chọn màu  
+    * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image303]  
+    * Xóa màu nền bằng cách nhấn nút ![][image304]  
+  * **Bo góc**  
+    * Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của thẻ tin tức tại ô nhập ![][image305]hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image306]  
+  * **Viền**  
+    * Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của thẻ tin tức tại ô nhập ![][image307]  
+    * Chọn màu cho viền bằng cách nhấn ô vuông ![][image308]sau đó chọn màu  
+    * Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image309]  
+    * Xóa viền bằng cách nhấn nút ![][image310]  
+  * **Đổ bóng**  
+    * Người dùng có thể chọn độ lớn đổ bóng của thẻ tin tức tại ô ![][image311]  
+    * Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image312]sau đó chọn màu  
+    * Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút ![][image313]  
+    * Xóa đổ bóng bằng cách nhấn nút ![][image314]  
+  * **Hiển thị tên tin tức**:  
+    * Người dùng nhấn nút ![][image315]để chuyển đổi qua lại giữa 2 trạng thái có tên tin tức và không có tên tin tức  
+  * **Hiển thị thời gian:**  
+    * Người dùng nhấn nút ![][image316]để chuyển đổi qua lại giữa 2 trạng thái có thời gian đăng tin tức và không có thời gian đăng tin tức  
+* **Hiển thị lượt xem:**  
+  * Người dùng nhấn nút ![][image316]để chuyển đổi qua lại giữa 2 trạng thái có lượt xem tin tức và không có lượt xem tin tức
+
