Documentation edits made through Mintlify web editor

--- a/app-builder/builder/components/flashsale.mdx
+++ b/app-builder/builder/components/flashsale.mdx
@@ -21,7 +21,7 @@ icon: "circle-user"
 
 
 
-* **Bước 2:** Người dùng nhấn **"**Tải ảnh lên hoặc chọn ảnh từ thư viện" và nhập tiêu đề flashsale
+* **Bước 2:** Người dùng nhấn "**Tải ảnh lên hoặc chọn ảnh từ thư viện**" và nhập tiêu đề flashsale
 
 <Frame caption="Thêm dữ liệu   ">
   <img
