--- a/app-builder/builder/components/support.mdx
+++ b/app-builder/builder/components/support.mdx
@@ -3,4 +3,96 @@ title: 'Support'
 description: 'Description of your new file.'
 icon: "circle-user"
 ---
+### **4.2.8. Support** 
+
+* **Dữ liệu**  
+* **Thêm dữ liệu mới:**  
+* **Bước 1:** Người dùng nhấn vào nút "Thêm dữ liệu mới"
+
+<Frame caption="Nút thêm dữ liệu mới ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image148_69d20274aa.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+
+
+
+* **Bước 2:** Người dùng nhập tên,  nhấn "**Tải ảnh lên hoặc chọn ảnh từ thư viện**" và chọn đường dẫn đến trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này)
+
+<Frame caption="Thêm dữ liệu  ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image24_da75c9f2f9.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+
+  * **Bước 3:** Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm ảnh hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu  
+* **Chỉnh sửa:**  
+  * **Bước 1:** Người dùng nhấn vào nút ![][image202]để đến trang chỉnh sửa
+
+<Frame caption="Nút chỉnh sửa ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image233_ad54a4651a.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+  * **Bước 2**: Người dùng thay đổi tên, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện” và sửa đường dẫn đến trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này)
+
+<Frame caption="Chỉnh sửa dữ liệu   ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image213_c7c5f31cc0.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+
+  * **Bước 3:** Người dùng nhấn **"**Lưu chỉnh sửa**" để tiến hành chỉnh sửa ảnh hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu  
+* **Xóa:**  
+  * **Bước 1:** Người dùng nhấn vào nút ![][image205]để xóa dữ liệu
+
+<Frame caption="Nút xóa dữ liệu ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image186_79b01da3b0.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+ 
+  * **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn **Xóa ngay** để tiến hành xóa hoặc nhấn **Hủy** để hủy quá trình xóa dữ liệu
+
+<Frame caption=" ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image161_914288a857.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+
+**Tổng quan:**
+
+* **Hiển thị hình ảnh:**  
+  * Người dùng nhấn nút ![][image338]để chuyển đổi qua lại giữa 2 trạng thái có hình ảnh hỗ trợ và không có hình ảnh hỗ trợ. Nếu bật, người dùng có thể điều chỉnh kích thước của hình ảnh.  
+* **Kích thước:**  
+  * Người dùng có thể chọn hoặc tăng/giảm chung kích thước của hình ảnh theo chiều rộng và chiều dài tại ![][image339]  
+* **Hiển thị nội dung:**  
+  * Người dùng nhấn nút ![][image340]để chuyển đổi qua lại giữa 2 trạng thái có nội dung hỗ trợ và không có nội dung hỗ trợ  
+* **Kích thước /Màu sắc:**  
+  * Người dùng có thể điều chỉnh kích thước và màu sắc cho nội dung hỗ trợ tại ![][image327]
+
 
