--- a/app-builder/builder/features/affiliate.mdx
+++ b/app-builder/builder/features/affiliate.mdx
@@ -3,4 +3,107 @@ title: 'Affiliate'
 description: 'Description of your new file.'
 icon: "circle-user"
 ---
+## **6.2. Affiliate** 
+
+**Tiêu đề**
+
+		**Nền**
+
+* Chọn màu nền cho tiêu đề bằng cách nhấn ô vuông ![][image120]sau đó chọn màu  
+  * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image121]  
+    * Xóa màu nền bằng cách nhấn nút ![][image122]  
+  * **Hiển thị tiêu đề:**  
+    * Người dùng nhấn nút ![][image123]để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho trang cá nhân. Ví dụ, nếu tiêu đề là "Liên kết hoa hồng" thì sẽ hiển thị như sau:
+
+<Frame caption="Tiêu đề Affilate  ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image127_8c06100eec.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+ 
+  * **Kích thước/ Màu sắc**:  
+    * Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần thanh toán tại ![][image125]
+
+**Tổng quan**
+
+		**Ẩn/ hiện chia sẻ QR:**
+
+* Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái ẩn hoặc hiện chia sẻ QR
+
+  **Ẩn/ hiện chia sẻ link:**
+
+  * Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái ẩn hoặc hiện chia sẻ link
+
+  	**Ẩn/ hiện tổng quan:**
+
+    * Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái ẩn hoặc hiện tổng quan
+
+	**Thống kê hoa hồng**
+
+		**Ẩn/ hiện tổng hoa hồng của bạn:**
+
+* Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái ẩn hoặc hiện tổng hoa hồng của bạn
+
+  **Ẩn/ hiện hoa hồng của tôi:**
+
+  * Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái ẩn hoặc hiện hoa hồng của tôi 
+
+		**Ẩn/ hiện hoa hồng đã rút:**
+
+* Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái ẩn hoặc hiện hoa hồng đã rút
+
+  **Ẩn/ hiện tổng doanh thu:**
+
+  * Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái ẩn hoặc hiện tổng doanh thu
+
+  **Ẩn/ hiện tổng đơn hàng:**
+
+    * Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái ẩn hoặc hiện tổng đơn hàng
+
+  **Ẩn/ hiện số người giới thiệu:**
+
+    * Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái ẩn hoặc hiện số người giới thiệu
+
+    **Ẩn/ hiện số người mua hàng:**
+
+* Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái ẩn hoặc hiện số người mua hàng  
+  	**Ẩn/ hiện yêu cầu thanh toán:**  
+* Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái ẩn hoặc hiện yêu cầu thanh toán
+
+**Tiện ích**
+
+		**Ẩn/ hiện đơn hàng:**
+
+* Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái ẩn hoặc hiện đơn hàng
+
+  **Ẩn/ hiện TOP CTV:**
+
+* Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái ẩn hoặc hiện top ctv  
+  	**Ẩn/ hiện giao dịch:**  
+  * Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái ẩn hoặc hiện giao dịch
+
+		**Ẩn/ hiện cẩm nang:**
+
+* Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái ẩn hoặc hiện cẩm nang
+
+**Sơ đồ, biểu đồ**
+
+		**Ẩn/ hiện cộng tác viên của tôi:**
+
+* Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái ẩn hoặc hiện cộng tác viên của tôi
+
+  **Ẩn/ hiện lịch sử giới thiệu:**
+
+* Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái ẩn hoặc hiện lịch sử giới thiệu
+
+  **Ẩn/ hiện thống kê doanh thu:**
+
+* Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái ẩn hoặc hiện thống kê doanh thu
+
+  **Ẩn/ hiện thống kê đơn hàng:**
+
+* Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái ẩn hoặc hiện thống kê đơn hàng
 
