Documentation edits made through Mintlify web editor

--- a/app-builder/builder/demo-app.mdx
+++ b/app-builder/builder/demo-app.mdx
@@ -3,4 +3,32 @@ title: 'Demo App'
 description: 'Description of your new file.'
 icon: "qrcode"
 ---
+## **7.1. Demo App** 
 
+*Cách 1: Xem Demo App từ trang **App của tôi***
+
+* Bước 1: Người dùng di chuyển con trỏ chuột đến thiết kế muốn chọn  
+* Bước 2: Người dùng nhấn nút ![][image374]và quét mã QR hiện lên để xem Demo
+
+<Frame caption="* Nút xem Demo \- Trang App của tôi ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image59_cd9ca57a6a.jpg"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+
+
+*Cách 2: Xem Demo App từ trang **Thiết kế***  
+Chọn nút xem Demo và quét mã QR hiện lên để xem Demo  
+
+<Frame caption=" Nút xem Demo \- Trang thiết kế ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image52_0b541e5704.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
