--- a/app-builder/builder/deploy-app.mdx
+++ b/app-builder/builder/deploy-app.mdx
@@ -3,4 +3,17 @@ title: 'Deploy App'
 description: 'Description of your new file.'
 icon: "arrow-up-from-arc"
 ---
+## **7.2. Deploy App** 
+
+* **Bước 1:** Người dùng di chuyển con trỏ chuột đến thiết kế muốn chọn  
+* **Bước 2:** Người dùng nhấn nút ![][image377]để xuất bản thiết kế, người dùng sẽ được điều hướng đến trang mua gói ứng dụng, tham khảo [**mục 2.2.6**](https://aiminis-organization.gitbook.io/aimini-user-manual/chuan-bi-va-thiet-ke/2.2-huong-dan-thiet-ke/2.2.6-xuat-ban-and-thanh-toan)
+* 
+<Frame caption="Nút xuất bản ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image128_f9bd6d4e97.jpg"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
