--- a/app-builder/builder/payment.mdx
+++ b/app-builder/builder/payment.mdx
@@ -1,6 +1,139 @@
 ---
-title: 'Thanh toán'
-description: 'Description of your new file.'
+title: "Thanh toán"
+description: "Description of your new file."
 icon: "credit-card-front"
 ---
 
+## **7.3. Thanh toán**
+
+Có 3 cách để truy cập trang mua gói ứng dụng:\
+Cách 1: Nhấn vào nút "Gói ứng dụng" phía bên trên thanh điều hướng
+
+<Frame caption="Nút gói ứng dụng ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image227_95eab047b9.jpg"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Cách 2: Nhấn vào nút ![][image380], sau đó chọn "**Gói thành viên**"
+
+<Frame caption="Nút danh mục chức năng ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image74_081ffaaacb.jpg"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Cách 3: Người dùng truy cập vào liên kết https://aimini.vn/membership để đến trang mua gói thành viên
+
+<Frame caption="Màn hình mua gói thành viên">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image71_14c95f2851.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+**\+ Trường hợp 1:** Nếu người dùng chọn các gói dùng thử, gói tiêu chuẩn, gói nâng cao, người dùng nhấn Thiết kế ngay
+
+**\+ Trường hợp 2:** Nếu người dùng chọn gói Doanh nghiệp, người dùng nhấn Liên hệ ngay
+
+- **a. Mua các gói dùng thử, gói tiêu chuẩn, gói nâng cao**
+- **Bước 1: Đến đây, người dùng có 3 sự lựa chọn:**
+- **Gói Dùng Thử:**
+- **Đặc điểm:** Miễn phí, cho phép bạn thiết kế, xuất bản và trải nghiệm ứng dụng.
+- **Tính năng:** Bao gồm tất cả các tính năng cơ bản và tính năng nâng cao.
+- **Thời gian:** Dùng thử miễn phí trong 7 ngày, với giới hạn 7 ngày để xuất bản ứng dụng.
+- **Gói Tiêu Chuẩn**
+- **Giá:** 7.100.000 VND/năm.
+- **Đặc điểm:** Xuất bản và quản lý ứng dụng liên mạch, là giải pháp toàn diện cho các dự án đang phát triển trên nền tảng nên tảng.
+- **Tính năng:** Bao gồm các tính năng cơ bản. Miễn phí 1 trong 3 tính năng: Affiliate Marketing, Flashsale hoặc Mini Game trong 6 tháng.Các tính năng nâng cao khác được dùng thử trong 3 tháng.  + **Gói Nâng Cao**
+- **Giá: 1.208.333 VND/tháng hoặc 14.500.000 VND/năm.**
+- **Đặc điểm: Phù hợp với các dự án có quy mô lớn và phát triển lâu dài.**
+- **Tính năng:** Bao gồm các tính năng cơ bản, Miễn phí 3 tính năng: Flash Sale, CTV (Affiliate Marketing) và Mini Game trong 12 tháng. Các tính năng nâng cao khác được dùng thử trong 3 tháng.
+
+<Frame caption="Gói dịch vụ  ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image190_e834c377e4.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- **Bước 2: Người dùng điền các thông tin liên hệ, bao gồm:**
+  - Nhập họ tên: Người dùng nhập họ và tên của mình
+  - Địa chỉ email: Người dùng nhập địa chỉ email của mình
+  - Số điện thoại: Người dùng nhập số điện thoại của mình
+  - Nhập tên doanh nghiệp: Người dùng nhập tên doanh nghiệp của mình
+  - Tên doanh nghiệp rút gọn: Người dùng nhập tên rút gọn của doanh nghiệp
+  - Địa chỉ website (nếu có): Người dùng nhập địa chỉ website của doanh nghiệp nếu có
+  - - Mô tả doanh nghiệp: Người dùng nhập 1 đoạn mô tả ngắn về doanh nghiệp
+- Cuối cùng, người dùng nhấn nút "Tiếp tục" để chuyển sang bước tiếp theo, hoặc nhấn nút "Quay lại" để quay lại bước phía trước.
+
+<Frame caption="Màn hình điền thông tin liên hệ ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image203_4fb1001af4.jpg "
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- **Bước 3: Người dùng điền các thông tin để thiết lập Mini App, bao gồm:**
+  - Nhập tên Mini App: Nhập tên Mini App mà người dùng muốn tạo
+  - Chọn danh mục: Chọn danh mục chủ đề mà Mini App hướng về như sức khỏe, giáo dục, thương mại điện tử, …
+  - Mô tả Mini App: Người dùng nhập mô tả ngắn về Mini App
+  - Thay đổi ảnh: Người dùng tải lên ảnh đại diện cho Mini app
+
+<Frame caption="Màn hình thiết lập Mini App  ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image123_1893555d03.jpg"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- **Bước 4: Người dùng chọn "Ví điện tử MOMO" hoặc "Ngân hàng" sau đó dùng ứng dụng Momo hoặc ngân hàng để quét mã QR và tiến hành thanh toán.**
+  - Sau đó người dùng nhấn nút "Tiếp tục" để hoàn tất quá trình thanh toán
+
+<Frame caption="Màn hình thanh toán ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image57_744fbbda75.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+**b. Mua gói doanh nghiệp**
+
+Nếu người dùng chọn gói Doanh nghiệp,  người dùng điền thông tin được yêu cầu và nhấn nút Gửi yêu cầu
+
+<Frame caption="Màn hình điền thông tin liên hệ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image99_0f50580eb8.jpg"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+**Các thông tin cần nhập bao gồm:**
+
+- Họ và tên: Người dùng nhập họ và tên của mình
+- Email: Người dùng nhập email của mình
+- Số điện thoại/Zalo: Người dùng nhập số điện thoại của mình
+- Công ty: Người dùng nhập tên công ty của mình
+- Website: Người dùng nhập website công ty của mình
+- Dịch vụ quan tâm: Người dùng chọn dịch vụ mà mình quan tâm
+- Nội dung: Người dùng nhập nội dung muốn nhắn gửi
+- Bạn biết đến DigiBird qua nguồn nào?: Người dùng chọn nguồn tin biết đến DigiBird\\
+- Sau đó người dùng tick chọn Đồng ý cung cấp thông tin theo chính sách riêng tư của DigiBird, sau đó nhấn "**Gửi yêu cầu**"
