Documentation edits made through Mintlify web editor

--- a/app-builder/builder/support.mdx
+++ b/app-builder/builder/support.mdx
@@ -1,6 +1,18 @@
 ---
-title: 'Kênh hỗ trợ'
-description: 'Description of your new file.'
+title: "Kênh hỗ trợ"
+description: "Description of your new file."
 icon: "comments-question"
 ---
+## **8.1. Kênh hỗ trợ** 
 
+* Bước 1: Người dùng nhấn vào biểu tượng ![][image388] ở góc dưới bên trái  
+* Bước 2: Người dùng chọn "Chat nhanh" để chat trực tiếp tại đây hoặc "Chat bằng Zalo" để mở nền tảng Zalo
+
+<Frame caption=" ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image3_cc41f87a2a.jpg"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
