--- a/app-builder/builder/demo-app.mdx
+++ b/app-builder/builder/demo-app.mdx
@@ -10,7 +10,7 @@ icon: "qrcode"
 * Bước 1: Người dùng di chuyển con trỏ chuột đến thiết kế muốn chọn  
 * Bước 2: Người dùng nhấn nút ![][image374]và quét mã QR hiện lên để xem Demo
 
-<Frame caption="* Nút xem Demo \- Trang App của tôi ">
+<Frame caption="Nút xem Demo \ Trang App của tôi ">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image59_cd9ca57a6a.jpg"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
@@ -24,7 +24,7 @@ icon: "qrcode"
 *Cách 2: Xem Demo App từ trang **Thiết kế***  
 Chọn nút xem Demo và quét mã QR hiện lên để xem Demo  
 
-<Frame caption=" Nút xem Demo \- Trang thiết kế ">
+<Frame caption="Nút xem Demo \ Trang thiết kế ">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image52_0b541e5704.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
