--- a/app-builder/builder/pages/flashsale-page.mdx
+++ b/app-builder/builder/pages/flashsale-page.mdx
@@ -4,10 +4,10 @@ description: "Description of your new file."
 icon: "circle-user"
 ---
 
-  ## **6.3. FlashSale**
+## **6.3. FlashSale**
 
-  **Bố cục**  
-  Người dùng có thể lựa chọn các bố cục hiển thị danh mục, bao gồm: Đơn giản, Danh sách, Cá tính.
+**Bố cục**\
+Người dùng có thể lựa chọn các bố cục hiển thị danh mục, bao gồm: Đơn giản, Danh sách, Cá tính.
 
 <Frame caption="Bố cục Flashsale">
   <img
@@ -22,7 +22,7 @@ icon: "circle-user"
 
 **Thêm dữ liệu mới**
 
-* **Bước 1**: Người dùng nhấn vào nút "Thêm dữ liệu mới"
+- **Bước 1**: Người dùng nhấn vào nút "Thêm dữ liệu mới"
 
 <Frame caption="Nút thêm dữ liệu  ">
   <img
@@ -32,11 +32,11 @@ icon: "circle-user"
     title=""
   />
 </Frame>
- 
-  * **Bước 2:**  
-    * Người dùng nhập tên chương trình  
-    * Người dùng nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" cho banner   
-    * Chọn chương trình sử dụng 
+
+- **Bước 2:**
+  - Người dùng nhập tên chương trình
+  - Người dùng nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" cho banner
+  - Chọn chương trình sử dụng
 
 <Frame caption="Thêm dữ liệu Flashsale ">
   <img
@@ -47,10 +47,9 @@ icon: "circle-user"
   />
 </Frame>
 
-
-  * **Bước 3**: Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm ảnh cho hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu  
-* **Chỉnh sửa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image94]để đến trang chỉnh sửa
+- **Bước 3**: Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm ảnh cho hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
+- **Chỉnh sửa:**
+  - **Bước 1:** Người dùng nhấn vào nút ![][image94]để đến trang chỉnh sửa
 
 <Frame caption="Nút chỉnh sửa  ">
   <img
@@ -61,8 +60,7 @@ icon: "circle-user"
   />
 </Frame>
 
-
-  * **Bước 2:** Người dùng nhập tên chương trình, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" và chọn chương trình áp dụng
+- **Bước 2:** Người dùng nhập tên chương trình, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" và chọn chương trình áp dụng
 
 <Frame caption="Trang chỉnh sửa dữ liệu   ">
   <img
@@ -73,9 +71,9 @@ icon: "circle-user"
   />
 </Frame>
 
-  * **Bước 3**: Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa ảnh hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu  
-* **Xóa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image97]để xóa dữ liệu
+- **Bước 3**: Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa ảnh hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu
+- **Xóa:**
+  - **Bước 1:** Người dùng nhấn vào nút ![][image97]để xóa dữ liệu
 
 <Frame caption="Nút xóa   ">
   <img
@@ -86,21 +84,17 @@ icon: "circle-user"
   />
 </Frame>
 
-
-* 
-  * **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn 'Xóa ngay" để tiến hành xóa hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu
+- - **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn 'Xóa ngay" để tiến hành xóa hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu
 
 **Tiêu đề**
 
-	**Nền**
+**Nền**
 
-* Chọn màu nền cho tiêu đề flashsale bằng cách nhấn ô vuông ![][image67]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image68]  
-  * Xóa màu nền bằng cách nhấn nút ![][image69]
-
-
-* **Hiển thị tiêu đề:**  
-  * Người dùng nhấn nút ![][image80]để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần tử danh mục. Ví dụ, nếu tiêu đề là "F⚡ash Sale" thì phần tử danh mục sẽ như thế này
+- Chọn màu nền cho tiêu đề flashsale bằng cách nhấn ô vuông ![][image67]sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image68]
+  - Xóa màu nền bằng cách nhấn nút ![][image69]
+- **Hiển thị tiêu đề:**
+  - Người dùng nhấn nút ![][image80]để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần tử danh mục. Ví dụ, nếu tiêu đề là "F⚡ash Sale" thì phần tử danh mục sẽ như thế này
 
 <Frame caption="Tiêu đề Flashsale   ">
   <img
@@ -111,74 +105,72 @@ icon: "circle-user"
   />
 </Frame>
 
-
-  * **Kích thước/ Màu sắc:**  
-    * Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của flashsale tại ![][image82]
+- **Kích thước/ Màu sắc:**
+  - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của flashsale tại ![][image82]
 
 **Bộ đếm giờ**
 
-	**Hiển thị bộ đếm giờ:**
+**Hiển thị bộ đếm giờ:**
 
-* Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái có bộ đếm giờ và không có bộ đếm giờ  
-  * **Nền:**  
-    * Người dùng có thể điều chỉnh màu sắc cho nền bộ đếm giờ của flashsale tại ![][image373]
+- Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái có bộ đếm giờ và không có bộ đếm giờ
+  - **Nền:**
+    - Người dùng có thể điều chỉnh màu sắc cho nền bộ đếm giờ của flashsale tại ![][image373]
 
-  	**Kích thước/ Màu sắc:**
+    **Kích thước/ Màu sắc:**
+    - Người dùng có thể điều chỉnh kích thước và màu sắc cho bộ đếm giờ của flashsale tại ![][image82]
+- **Thẻ sản phẩm**
+  - **Lề ngoài**
+    - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image133]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image134]
+    - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image135]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image136]
+  - **Lề trong**
+    - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image137]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image138]
+    - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image139]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image140]
+  - **Kích thước**
+    - Người dùng có thể chọn hoặc tăng/giảm kích thước của các thẻ sản phẩm tại ![][image331]
 
-    * Người dùng có thể điều chỉnh kích thước và màu sắc cho bộ đếm giờ của flashsale tại ![][image82]  
-* **Thẻ sản phẩm**  
-  * **Lề ngoài**  
-    * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image133]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image134]  
-    * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image135]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image136]  
-  * **Lề trong**  
-    * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image137]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image138]  
-    * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image139]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image140]  
-  * **Kích thước**  
-    *  Người dùng có thể chọn hoặc tăng/giảm kích thước của các thẻ sản phẩm tại ![][image331]
-
-		**Kiểu hình ảnh**
+      **Kiểu hình ảnh**
 
 Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại ![][image107]
 
-* **Nền**  
-  * Chọn màu nền cho thẻ sản phẩm bằng cách nhấn ô vuông ![][image120]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image121]  
-    * Xóa màu nền bằng cách nhấn nút ![][image122]  
-  * **Bo góc**  
-    * Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của thẻ sản phẩm tại ô nhập ![][image141]hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image142]  
-  * **Viền**  
-    * Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của thẻ sản phẩm tại ô nhập ![][image143]  
-    * Chọn màu cho viền bằng cách nhấn ô vuông ![][image144]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image145]  
-    * Xóa viền bằng cách nhấn nút ![][image146]  
-  * **Đổ bóng**  
-    * Người dùng có thể chọn độ lớn đổ bóng của thẻ sản phẩm tại ô ![][image147]  
-    * Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image148]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút ![][image149]  
-    * Xóa đổ bóng bằng cách nhấn nút ![][image150]  
-  * **Hiển thị tên sản phẩm**:  
-    * Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái có tên sản phẩm và không có tên sản phẩm  
-  * **Hiển thị danh mục:**  
-    * Người dùng nhấn nút ![][image109]để chuyển đổi qua lại giữa 2 trạng thái có danh mục và không có danh mục  
-  * **Hiển thị giá tiền:**  
-    * Người dùng chọn không hiển thị giá, giá cơ bản, giá khuyến mãi hoặc tất cả tại ![][image110]  
-  * **Hiển thị giá giảm:**  
-    * Người dùng chọn hiển thị giá giảm theo phần trăm hay giá gốc![][image111]  
-  * **Sản phẩm Sale:**  
-    * Người dùng nhấn nút ![][image112]để chuyển đổi qua lại giữa 2 trạng thái có sản phẩm sale và không có sản phẩm sale  
-  * **Hiển thị nhãn:**  
-    * Người dùng chọn không hiển thị nhãn ![][image113] hoặc chọn hiển thị nhãn flashsale, bán chạy, mới nhất.  
-  * **Hiển thị yêu thích:**  
-    * Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có nút yêu thích và không có nút yêu thích  
-  * **Hiển thị đánh giá:**  
-    * Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có số sao đánh giá và không có số sao đánh giá  
-  * **Hiển thị số lượng yêu thích**  
-    *  Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có số lượng yêu thích và không có số lượng yêu thích  
-  * **Hiển thị số lượng đã bán:**  
-    * Người dùng nhấn nút ![][image116]để chuyển đổi qua lại giữa 2 trạng thái có số lượng đã bán và không có số lượng đã bán  
-  * **Hiển thị nút giỏ hàng:**  
-    * Người dùng nhấn nút ![][image117]để chuyển đổi qua lại giữa 2 trạng thái có nút thêm vào giỏ hàng và không có nút thêm vào giỏ hàng.
+- **Nền**
+  - Chọn màu nền cho thẻ sản phẩm bằng cách nhấn ô vuông ![][image120]sau đó chọn màu
+    - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image121]
+    - Xóa màu nền bằng cách nhấn nút ![][image122]
+  - **Bo góc**
+    - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của thẻ sản phẩm tại ô nhập ![][image141]hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image142]
+  - **Viền**
+    - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của thẻ sản phẩm tại ô nhập ![][image143]
+    - Chọn màu cho viền bằng cách nhấn ô vuông ![][image144]sau đó chọn màu
+    - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image145]
+    - Xóa viền bằng cách nhấn nút ![][image146]
+  - **Đổ bóng**
+    - Người dùng có thể chọn độ lớn đổ bóng của thẻ sản phẩm tại ô ![][image147]
+    - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image148]sau đó chọn màu
+    - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút ![][image149]
+    - Xóa đổ bóng bằng cách nhấn nút ![][image150]
+  - **Hiển thị tên sản phẩm**:
+    - Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái có tên sản phẩm và không có tên sản phẩm
+  - **Hiển thị danh mục:**
+    - Người dùng nhấn nút ![][image109]để chuyển đổi qua lại giữa 2 trạng thái có danh mục và không có danh mục
+  - **Hiển thị giá tiền:**
+    - Người dùng chọn không hiển thị giá, giá cơ bản, giá khuyến mãi hoặc tất cả tại ![][image110]
+  - **Hiển thị giá giảm:**
+    - Người dùng chọn hiển thị giá giảm theo phần trăm hay giá gốc![][image111]
+  - **Sản phẩm Sale:**
+    - Người dùng nhấn nút ![][image112]để chuyển đổi qua lại giữa 2 trạng thái có sản phẩm sale và không có sản phẩm sale
+  - **Hiển thị nhãn:**
+    - Người dùng chọn không hiển thị nhãn ![][image113] hoặc chọn hiển thị nhãn flashsale, bán chạy, mới nhất.
+  - **Hiển thị yêu thích:**
+    - Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có nút yêu thích và không có nút yêu thích
+  - **Hiển thị đánh giá:**
+    - Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có số sao đánh giá và không có số sao đánh giá
+  - **Hiển thị số lượng yêu thích**
+    - Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có số lượng yêu thích và không có số lượng yêu thích
+  - **Hiển thị số lượng đã bán:**
+    - Người dùng nhấn nút ![][image116]để chuyển đổi qua lại giữa 2 trạng thái có số lượng đã bán và không có số lượng đã bán
+  - **Hiển thị nút giỏ hàng:**
+    - Người dùng nhấn nút ![][image117]để chuyển đổi qua lại giữa 2 trạng thái có nút thêm vào giỏ hàng và không có nút thêm vào giỏ hàng.
 
-		**Kiểu nút giỏ hàng:** 
+      **Kiểu nút giỏ hàng:**
 
 Người dùng có thể chọn chuyển đổi hiển thị giỏ hàng giữa icon hoặc button ![][image118]
